[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/missile.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Missile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.793, 12.902 )

[node name="Missile" type="Area2D"]
script = ExtResource( 2 )
speed = 1000

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 10.0079, 0.676453 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Missile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Missile_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
